# sdc-2020

./: .gitignore  .gitmodules  README.md  docker_join.sh  docker_run.sh
Docker/: Dockerfile  build.sh
catkin_ws/src/hw3_0513336/: CMakeLists.txt  package.xml
catkin_ws/src/hw3_0513336/src/: imu_odom.cpp
catkin_ws/src/hw4_0513336/: CMakeLists.txt  answer.odt  package.xml
catkin_ws/src/hw4_0513336/src/: ekf_fusion.cpp
catkin_ws/src/imu_odom/: CMakeLists.txt  package.xml
catkin_ws/src/imu_odom/src/: imu_odom.cpp
hw2/: Makefile  weather_sim.cpp
hw5/: Dockerfile  build.sh  docker_run.sh
