<?xml version="1.0"?>
<package format="2">
  <name>hw4_0513336</name>
  <version>0.0.0</version>
  <description>The ekf of sensor fusion practice package</description>

  <maintainer email="bensonpuppy1997@gmail.com">biomotion</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <build_depend>robot_pose_ekf</build_depend>
  <build_export_depend>robot_pose_ekf</build_export_depend>
  <exec_depend>robot_pose_ekf</exec_depend>


  <export>

  </export>
</package>
